Change neopixels to white leds 24V for better lightning

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -7,8 +7,8 @@ gcode:
   {% set ON_TEXTURED_PLATE = params.TEXTUREDPLATE|default('false') %}
   {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(1) %}
   
+  CASELIGHT POWER=1
   BED_MESH_CLEAR   
-  LIGHT_RED 
   SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0
 
   M106 S255          ; set print fan to full speed to avoid melting fan ducts
@@ -25,7 +25,6 @@ gcode:
   ; Soak printer to let it thermally expand to have a constant first layer 
   {% if (SOAK|int) > 0 %}
     SHOW TEXT='starting Soak'
-    LIGHT_ORANGE
     {% for timer in range( SOAK|int,0,-1) %}
       # we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
       SHOW TEXT='Soak: {timer|int}m remaining'
@@ -38,7 +37,6 @@ gcode:
 
   M104 S{EXTRUDER}    ; Let the nozzle heatup to temperature while probing mesh
 
-  LIGHT_BLUE
   SHOW TEXT='Quad Gantry Level'
   QUAD_GANTRY_LEVEL CALIBRATE=false
 
@@ -65,7 +63,6 @@ gcode:
  
   SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
   SHOW TEXT='Print Started'
-  LIGHT_WHITE
 
 [gcode_macro PRINT_END]
 description: PRINT_END KEEP_BED_AT=0
@@ -86,7 +83,7 @@ gcode:
     G0 X280 Y308 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     M117 Print Complete
-    CASELIGHT                     ; kill lights
+    CASELIGHT POWER=0                     ; kill lights
     
 
 [gcode_macro PAUSE]
