--- a/klipper/light.cfg
+++ b/klipper/light.cfg
@@ -2,44 +2,30 @@
 #	LED MACROS
 #####################################################################
 [gcode_macro CASELIGHT]
-description: CASELIGHT R=0 G=0 B=0
+description: CASELIGHT POWER=0|1
 gcode:
-  {% set RED = params.R|default(0)|float %}
-  {% set GREEN = params.G|default(0)|float %}
-  {% set BLUE = params.B|default(0)|float %}
-  SET_LED LED=caselight RED={RED} GREEN={GREEN} BLUE={BLUE}
-
-[gcode_macro LIGHT_RED]
-gcode:
-    CASELIGHT R=1 # red
-  
-[gcode_macro LIGHT_ORANGE]
-gcode:
-    CASELIGHT R=1 G=0.4 # orange
-
-[gcode_macro LIGHT_BLUE]
-gcode:
-    CASELIGHT B=1 # blue
-
-[gcode_macro LIGHT_GREEN]
-gcode:
-    CASELIGHT G=1 # Green
-
-[gcode_macro LIGHT_WHITE]
-gcode:
-    CASELIGHT R=1 G=1 B=1 # White
-
+  {% set POWER = params.POWER|default(0)|float %}
+  SET_PIN PIN=CASELIGHT_PIN VALUE={POWER}
 
 #####################################################################
 #	LED Control
 #####################################################################
 
-[neopixel caselight]
-#  Chamber Lighting - In 5V-RGB Position
-pin: PD3
-chain_count: 36
-color_order: GRB
-initial_RED: 0.0
-initial_GREEN: 0.0
-initial_BLUE: 1
+[output_pin CASELIGHT_PIN]
+pin: PB7
+pwm: True
+value: 0.5
+shutdown_value: 0
+cycle_time: 0.010
+
+
+##### Not used anymore, keeping it for potential neopixel use later
+# [neopixel caselight]
+# #  Chamber Lighting - In 5V-RGB Position
+# pin: PD3
+# chain_count: 36
+# color_order: GRB
+# initial_RED: 0.0
+# initial_GREEN: 0.0
+# initial_BLUE: 1
 
