avoid filament "park" when printer not printing

--- a/klipper/filament_switch.cfg
+++ b/klipper/filament_switch.cfg
@@ -1,20 +1,21 @@
 ######## Filament change
 [gcode_macro M600]
 gcode:
-    M117 Filament change
-    PAUSE
-    PARK_BUCKET Z=-1
-	SET_IDLE_TIMEOUT TIMEOUT={12*60*60} ## Timeout 12H when filament change triggered
+	{% if printer.idle_timeout.state == "Printing" %} # Avoid triggering filament change when not printing (purging by example)
+		M117 Filament change
+		PAUSE
+		PARK_BUCKET Z=-1
+		SET_IDLE_TIMEOUT TIMEOUT={12*60*60} ## Timeout 12H when filament change triggered
     ##UNLOAD
     ## wait for filament change
     ## purge & clean nozzle
+	{% endif %}
 
 [gcode_macro LOAD]
 variable_status: 0
 variable_extruder_target_temp: 180
 
 default_parameter_DISTANCE: 49 #AB
-#default_parameter_DISTANCE: 105 #galileo
 
 gcode:
     {% if not printer.idle_timeout.state == "Printing" %} 
