add new input shaper after resonance testing

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -63,17 +63,11 @@ restart_method: command
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 5000 ; safe 1500					#Max 4000
-max_accel_to_decel: 5000
+max_accel: 4500 ; safe 3500
+max_accel_to_decel: 3000
 max_z_velocity: 20			#Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 500
 square_corner_velocity: 5.0
-
-[input_shaper]
-shaper_freq_x: 41.5
-shaper_type_x: mzv
-shaper_freq_y: 41.5
-shaper_type_y: mzv
 
 #####################################################################
 #  X/Y Stepper Settings
