--- a/klipper/raspi_mcu_adxl.cfg
+++ b/klipper/raspi_mcu_adxl.cfg
@@ -11,7 +11,70 @@ axes_map: z,-x,y
 [resonance_tester]
 accel_chip: adxl345
 probe_points:
-    150,150,20 
+    150,150,20
 max_smoothing: 0.1
 min_freq: 10
 max_freq: 100
+
+[input_shaper]
+shaper_freq_x: 63.6
+shaper_type_x: mzv
+shaper_freq_y: 58.4
+shaper_type_y: 2hump_ei
+
+
+# X
+# Fitted shaper 'zv' frequency = 64.2 Hz (vibrations = 2.5%, smoothing ~= 0.044)
+# To avoid too much smoothing with 'zv', suggested max_accel <= 16100 mm/sec^2
+# Fitted shaper 'mzv' frequency = 63.6 Hz (vibrations = 0.0%, smoothing ~= 0.051)
+# To avoid too much smoothing with 'mzv', suggested max_accel <= 11900 mm/sec^2
+# Fitted shaper 'ei' frequency = 76.8 Hz (vibrations = 0.0%, smoothing ~= 0.055)
+# To avoid too much smoothing with 'ei', suggested max_accel <= 11000 mm/sec^2
+# Fitted shaper '2hump_ei' frequency = 96.4 Hz (vibrations = 0.0%, smoothing ~= 0.059)
+# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 10300 mm/sec^2
+# Fitted shaper '3hump_ei' frequency = 117.2 Hz (vibrations = 0.0%, smoothing ~= 0.061)
+# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 10100 mm/sec^2
+# Recommended shaper is mzv @ 63.6 Hz
+# Y 
+# Fitted shaper 'zv' frequency = 62.0 Hz (vibrations = 27.8%, smoothing ~= 0.047)
+# To avoid too much smoothing with 'zv', suggested max_accel <= 15000 mm/sec^2
+# Fitted shaper 'mzv' frequency = 45.8 Hz (vibrations = 5.3%, smoothing ~= 0.097)
+# To avoid too much smoothing with 'mzv', suggested max_accel <= 6200 mm/sec^2
+# Fitted shaper 'ei' frequency = 59.2 Hz (vibrations = 6.7%, smoothing ~= 0.092)
+# To avoid too much smoothing with 'ei', suggested max_accel <= 6500 mm/sec^2
+# Fitted shaper '2hump_ei' frequency = 58.4 Hz (vibrations = 0.2%, smoothing ~= 0.158)
+# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 3800 mm/sec^2
+# Fitted shaper '3hump_ei' frequency = 61.0 Hz (vibrations = 0.0%, smoothing ~= 0.220)
+# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 2700 mm/sec^2
+# Recommended shaper is 2hump_ei @ 58.4 Hz
+
+######## Testing resonances 
+### A/B Frequencies https://www.klipper3d.org/Measuring_Resonances.html#testing-custom-axes
+# ~/klipper/scripts/graph_accelerometer.py -c /tmp/raw_data_axis*.csv -o /tmp/resonances.png
+
+[gcode_macro RESONANCE_MOTORS]
+description: Do belt resonance A&B
+gcode:
+  RESONANCE_MOTOR_B
+  RESONANCE_MOTOR_A
+
+[gcode_macro RESONANCE_MOTOR_B]
+gcode:
+  TEST_RESONANCES AXIS=1,1 FREQ_START=10 FREQ_END=100 FREQ_STEP=0.5 OUTPUT=raw_data
+
+[gcode_macro RESONANCE_MOTOR_A]
+gcode:
+  TEST_RESONANCES AXIS=-1,1 FREQ_START=10 FREQ_END=100 FREQ_STEP=0.5 OUTPUT=raw_data
+
+
+### X/Y Frequencies https://www.klipper3d.org/Measuring_Resonances.html#measuring-the-resonances_1
+# ~/klipper/scripts/calibrate_shaper.py /tmp/resonances_x_*.csv -o /tmp/shaper_calibrate_x.png
+# ~/klipper/scripts/calibrate_shaper.py /tmp/resonances_y_*.csv -o /tmp/shaper_calibrate_y.png
+
+[gcode_macro RESONANCE_X]
+gcode:
+  TEST_RESONANCES AXIS=X FREQ_START=10 FREQ_END=100 FREQ_STEP=0.5 OUTPUT=resonances
+
+[gcode_macro RESONANCE_Y]
+gcode:
+  TEST_RESONANCES AXIS=Y FREQ_START=10 FREQ_END=100 FREQ_STEP=0.5 OUTPUT=resonances
