update to latest, add it to print_start and slicer

--- a/klipper/adaptive_bed_mesh.cfg
+++ b/klipper/adaptive_bed_mesh.cfg
@@ -17,13 +17,22 @@
 #    algorithm (bicubic/lagrange) depending of the size and shape of the mesh computed (like 3x3 vs 3x9)
 
 ### Installation ###
-# 1. In you custom start gcode from SuperSlicer, add the SIZE argument to your PRINT_START macro like this:
-#    PRINT_START [all your shit..] SIZE={first_layer_print_min[0]}_{first_layer_print_min[1]}_{first_layer_print_max[0]}_{first_layer_print_max[1]}
-# 2. Configure a normal [bed_mesh] section in your config as you want for your machine (it will be the base to compute the new adaptive bed mesh). Keep
+# 1. You need to change some custom settings in your slicer:
+#      a. SuperSlicer is easy: add in your custom g_code PRINT_START macro the SIZE argument like this:
+#               PRINT_START [all your shit..] SIZE={first_layer_print_min[0]}_{first_layer_print_min[1]}_{first_layer_print_max[0]}_{first_layer_print_max[1]}
+#      b. Cura is a bit more tricky as you need to install the post process plugin by frankbags called MeshPrintSize.py.
+#               In Cura menu, click Help > Show configuration folder. Copy the python script from the following link into the plugins folder: https://gist.github.com/frankbags/c85d37d9faff7bce67b6d18ec4e716ff#file-meshprintsize-py
+#               Then restart Cura and select in the menu: Extensions > Post processing > select Mesh Print Size
+#               At the end, change your custom g_code PRINT_START macro the SIZE argument like this:
+#               PRINT_START [all your shit..] SIZE=%MINX%_%MINY%_%MAXX%_%MAXY%
+# 2. In klipper, configure a normal [bed_mesh] section in your config as you want for your machine (it will be the base to compute the new adaptive bed mesh). Keep
 #    in mind that you can push the precision a little bit with a mesh of 9x9 for example as not all the points will be probed.
-# 3. VERY IMPORTANT : be sure to put the "mesh_pps" entry in the [bed_mesh] section (you can choose what you want or let it to default, but it's mandatory
-#    to really specify it in your config for my macro to work.
-# 4. In your PRINT_START macro, get the SIZE argument and pass it to the ADAPTIVE_BED_MESH to start the probing sequence like so:
+# 3. VERY IMPORTANT CHECKS:
+#      a. Be sure to put the "mesh_pps" entry in the [bed_mesh] section. You can choose what you want or let it to default, but even if it's optional for Klipper, it's mandatory
+#         to really specify it in your config for my macro to work correctly.
+#      b. Also check that the mesh_min, mesh_max, probe_count and mesh_pps configs entry in your [bed_mesh] section are specified using double numbers like "probe_count: 9,9"
+#         as my macro is waiting for TWO numbers and will fail if there is only one specified at thoose positions.
+# 4. In your PRINT_START macro definition, get the SIZE argument and pass it to the ADAPTIVE_BED_MESH to start the probing sequence like so:
 #    {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
 #    ADAPTIVE_BED_MESH SIZE={FL_SIZE}
 # 5. Optional: my macro is using the RESPOND command for debugging purposes: add the [respond] section to your config or delete all the RESPOND lines in my macro
