--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -6,6 +6,7 @@ gcode:
   {% set SOAK = params.SOAK|default(0)|float %}
   {% set ON_TEXTURED_PLATE = params.TEXTUREDPLATE|default('false') %}
   {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(1) %}
+  {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
   
   CASELIGHT POWER=1
   BED_MESH_CLEAR   
@@ -41,7 +42,7 @@ gcode:
   QUAD_GANTRY_LEVEL CALIBRATE=false
 
   SHOW TEXT='Bed Mesh'
-  BED_MESH_CALIBRATE
+  ADAPTIVE_BED_MESH SIZE={FL_SIZE}
 
   # Prepare nozzle for cleaning and calibration
   SHOW TEXT='Heating Extruder for calibration'
