--- a/klipper/probe.cfg
+++ b/klipper/probe.cfg
@@ -19,13 +19,14 @@ drop_first_result: true
 [bed_mesh]
 speed: 300
 horizontal_move_z: 10
-mesh_min: 15, 25
+mesh_min: 15,25
 mesh_max: 285,275
 fade_start: 0.7
 fade_end: 10.0
-probe_count: 5,3
-algorithm: lagrange
-relative_reference_index: 7
+probe_count: 7,7
+algorithm: bicubic
+mesh_pps: 2,2
+relative_reference_index: 25
 
 #####################################################################
 #  Gantry Adjustment Routines
