--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -31,6 +31,7 @@ path: ~/gcode_files
 [include filament_sensor.cfg]
 [include offset_macro.cfg]
 [include light.cfg]
+[include adaptive_bed_mesh.cfg]
 [include unstress_print.cfg]
 [include raspi_mcu_adxl.cfg]
 [include pressure_advance_default.cfg]
