BED_MESH_CALIBRATE was missing a space when forwarding parameters
Parameters where sent like:
BED_MESH_CALIBRATE MESH_MIN=255MESH_MAX=120PROBE_COUNT=7,7

causing parsing errors

--- a/klipper/z_calibration.cfg
+++ b/klipper/z_calibration.cfg
@@ -140,9 +140,7 @@ gcode:
 rename_existing: _BED_MESH_CALIBRATE
 gcode:
     SECURE_ATTACH_PROBE
-    _BED_MESH_CALIBRATE {% for p in params 
-           %}{'%s=%s' % (p, params[p])}{% 
-          endfor %}
+    _BED_MESH_CALIBRATE {% for p in params %}{'%s=%s ' % (p, params[p])}{% endfor %}
     SECURE_DOCK_PROBE
 
 [gcode_macro PROBE_ACCURACY]
