draft, will get back to this later

--- a/klipper/filament_switch.cfg
+++ b/klipper/filament_switch.cfg
@@ -7,3 +7,21 @@ gcode:
 		PARK_BUCKET Z=-1
 		SET_IDLE_TIMEOUT TIMEOUT={12*60*60} ## Timeout 12H when filament change triggered
 	{% endif %}
+
+
+[gcode_macro set_current_extruder]
+variable_current_extruder: 0
+gcode: 
+# set current extruder to printer variables
+	{% set EXTRUDER_NUMBER = params.EXTRUDER_NUMBER|default(-1)|float %}
+	SET_GCODE_VARIABLE MACRO=set_current_extruder VARIABLE=extruder_number VALUE={EXTRUDER_NUMBER}
+
+
+[gcode_macro change_extruder]
+gcode:
+	{% set NEW_EXTRUDER_NUMBER = params.NEW_EXTRUDER_NUMBER|default(-1)|float %}
+	{% set CURRENT_EXTRUDER_NUMBER = printer["gcode_macro set_current_extruder"].extruder_number %}
+	{% if CURRENT_EXTRUDER_NUMBER != NEW_EXTRUDER_NUMBER %}
+		set_current_extruder EXTRUDER_NUMBER={NEW_EXTRUDER_NUMBER}
+		M600
+	{% endif %}
