no need to store a variable, using current/Next should be enough to avoid the first change_extruder in the gcode.

--- a/klipper/filament_switch.cfg
+++ b/klipper/filament_switch.cfg
@@ -8,20 +8,11 @@ gcode:
 		SET_IDLE_TIMEOUT TIMEOUT={12*60*60} ## Timeout 12H when filament change triggered
 	{% endif %}
 
-
-[gcode_macro set_current_extruder]
-variable_current_extruder: 0
-gcode: 
-# set current extruder to printer variables
-	{% set EXTRUDER_NUMBER = params.EXTRUDER_NUMBER|default(-1)|float %}
-	SET_GCODE_VARIABLE MACRO=set_current_extruder VARIABLE=extruder_number VALUE={EXTRUDER_NUMBER}
-
-
 [gcode_macro change_extruder]
+description: change_extruder CURRENT=[current_extruder] NEXT=[next_extruder]
 gcode:
-	{% set NEW_EXTRUDER_NUMBER = params.NEW_EXTRUDER_NUMBER|default(-1)|float %}
-	{% set CURRENT_EXTRUDER_NUMBER = printer["gcode_macro set_current_extruder"].extruder_number %}
-	{% if CURRENT_EXTRUDER_NUMBER != NEW_EXTRUDER_NUMBER %}
-		set_current_extruder EXTRUDER_NUMBER={NEW_EXTRUDER_NUMBER}
+	{% set CURRENT_EXTRUDER = params.CURRENT|default(-1)|float %}
+	{% set NEXT_EXTRUDER = params.NEXT|default(-1)|float %}
+	{% if CURRENT_EXTRUDER != NEXT_EXTRUDER %}
 		M600
 	{% endif %}
