--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -43,11 +43,11 @@ variable_enable_purge:              False
 # These parameters define your filament purging. The retract variable is used to retract right after purging to prevent unnecessary
 # oozing. Some filament are particularly oozy and may continue to ooze out of the nozzle for a second or two after retracting. The
 # ooze dwell variable makes allowance for this. Update as necessary. If you decided to not enable purge, you can ignore this section.
-variable_purge_len:            50	         ; Amount of filament, in mm, to purge.
+variable_purge_len:            70	         ; Amount of filament, in mm, to purge.
 variable_purge_spd:           150	         ; Speed, in mm/min, of the purge.
 variable_purge_temp_min:      200	         ; Minimum nozzle temperature to permit a purge. Otherwise, purge will not occur.
-variable_purge_ret:             1            ; Retract length, in mm, after purging to prevent slight oozing. Adjust as necessary.
-variable_ooze_dwell:            15            ; Dwell/wait time, in seconds, after purging and retracting.
+variable_purge_ret:             2            ; Retract length, in mm, after purging to prevent slight oozing. Adjust as necessary.
+variable_ooze_dwell:            0            ; Dwell/wait time, in seconds, after purging and retracting.
 
 # Adjust this so that your nozzle scrubs within the brush. Currently defaulted to be a lot higher for safety. Be careful not to go too low!
 variable_brush_top:            5 
@@ -57,7 +57,7 @@ variable_brush_top:            5
 variable_clearance_y:           30
 variable_clearance_z:           15 	         ; When traveling, but not cleaning, the clearance along the z-axis between nozzle and brush.
 variable_wipe_qty:              2	         ; Number of complete (A complete wipe: left, right, left OR right, left, right) wipes.
-variable_prep_spd_xy:        15000	         ; Travel (not cleaning) speed along x and y-axis in mm/min.
+variable_prep_spd_xy:        18000	         ; Travel (not cleaning) speed along x and y-axis in mm/min.
 variable_prep_spd_z:         1500	         ; Travel (not cleaning) speed along z axis in mm/min.
 variable_wipe_spd_xy:        6000	         ; Nozzle wipe speed in mm/min.
 
@@ -158,7 +158,7 @@ gcode:
       {% set Ry = printer.configfile.config["stepper_y"]["position_max"]|float %}
 
       ### Prepare positionning away from klicky dock
-      G1 Y{Ry - clearance_y} F{prep_spd_z}
+      G1 Y{Ry - clearance_y} F{prep_spd_xy}
 
       ## Check if user enabled purge option or not.
       M118 Is purge enabled? {_enable_purge}
@@ -172,9 +172,9 @@ gcode:
 
          ### Position for purge. Randomly selects middle of left or right bucket. It references from the middle of the left bucket.
          {% if bucket_pos == 0 %}
-            G1 X{bucket_start + (bucket_left_width / 3)}
+            G1 X{bucket_start + (bucket_left_width / 3)} F{prep_spd_xy}
          {% else %}
-            G1 X{bucket_start + bucket_left_width + bucket_gap + (bucket_right_width * 1 / 2)}
+            G1 X{bucket_start + bucket_left_width + bucket_gap + (bucket_right_width * 1 / 2)} F{prep_spd_xy}
          {% endif %}
 
          ### Move over bucket
