changing order to avoid Oozing to mess the z calibration, avoid purging before.

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -45,22 +45,21 @@ gcode:
   SHOW TEXT='Bed Mesh'
   ADAPTIVE_BED_MESH SIZE={FL_SIZE}
 
-  # Prepare nozzle for cleaning and calibration
-  SHOW TEXT='Heating Extruder for calibration'
+  SHOW TEXT='Heating Extruder'
   M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
-  clean_nozzle PURGE=true  ; clean nozzle
-  SHOW TEXT='Waiting oozing...'
-  G4 P30000                 ; Wait 30 seconds that oozes stop
   clean_nozzle PURGE=false  ; clean nozzle
 
   SHOW TEXT='Calibrate Z'
   CALIBRATE_Z
-  ; Apply offset for textured plate that is lower than sensor probed
+
+  # Apply offset for textured plate that is lower than sensor probed
   M118 Is TEXTURED_PLATE_OFFSET applied: {ON_TEXTURED_PLATE == 'true'}
   {% if ON_TEXTURED_PLATE == 'true' %}
     TEXTURED_PLATE_OFFSET
   {% endif %}
-  
+
+  clean_nozzle PURGE=true  ; purge filament
+
   G90                         ; Use absolute coordinates
  
   SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
