Lower run current slightly, Increase max_extrude distance for bigger purge

--- a/klipper/printer.cfg
+++ b/klipper/printer.cfg
@@ -245,6 +245,7 @@ full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 max_extrude_cross_section: 4
+max_extrude_only_distance: 80.0
 ##      In E0 OUT Position
 heater_pin: PB15
 ##	Validate the following thermistor type to make sure it is correct
@@ -261,8 +262,7 @@ min_extrude_temp: 170
 [tmc2209 extruder]
 uart_pin: PD7
 interpolate: false
-run_current: 0.5
-hold_current: 0.4
+run_current: 0.4
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
