clean a bunch of times before calibrate-z to avoid plastic goop on the nozzle

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -13,16 +13,18 @@ gcode:
   SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0
 
   M106 S255          ; set print fan to full speed to avoid melting fan ducts
-  M104 S180          ; pre-heat nozzle non-blocking
+  M104 S{EXTRUDER}   ; pre-heat nozzle non-blocking
   M140 S{BED}        ; Pre-heat bed non-blocking
 
-  CG28             ; Home all axes
+  CG28               ; Home all axes
 
   PARK_CENTER Z=15   # Position Nozzle at center to help preheat chamber
 
   SHOW TEXT='Heating bed...'
   M190 S{BED}        ; heat bed
   SET_NEVERMORE_SPEED SPEED={NEVERMORE_FAN_SPEED}
+
+  clean_nozzle PURGE=false  ; clean nozzle
 
   ; Soak printer to let it thermally expand to have a constant first layer 
   {% if (SOAK|int) > 0 %}
@@ -31,13 +33,15 @@ gcode:
       # we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
       SHOW TEXT='Soak: {timer|int}m remaining'
       M105
+      ; if factor of 5 clean nozzle
+      ; else wait 1 minute
       G4 P60000 # Wait 1 minute
           
     {% endfor %}
   SHOW TEXT='Soak Complete'
   {% endif %}
 
-  M104 S{EXTRUDER}    ; Let the nozzle heatup to temperature while probing mesh
+  clean_nozzle PURGE=false  ; clean nozzle
 
   SHOW TEXT='Quad Gantry Level'
   QUAD_GANTRY_LEVEL CALIBRATE=false
