--- a/klipper/filament_sensor.cfg
+++ b/klipper/filament_sensor.cfg
@@ -2,7 +2,7 @@
 [filament_motion_sensor filament_sensor]
 detection_length: 10.0
 extruder: extruder
-switch_pin: PB13
+switch_pin: ^PB13
 pause_on_runout: True
 pause_delay: 1.2
 runout_gcode: 
