added fluidd.cfg that was already on the board. Updated QGL tolerance from 0.015 to 0.03 Changed Klicky probe, updated values accordingly Decrease accels slightly for easier tuning, pressure advance and let empty accels in slicer Update Pressure Advance macro with min/max speed. PA each 0.005 instead of 0.0025

--- a/klipper/pressure_advance_calibration.cfg
+++ b/klipper/pressure_advance_calibration.cfg
@@ -1,15 +1,19 @@
 
 [gcode_macro PRESSURE_ADVANCE_CALIBRATION]
-description: PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 SOAK=20 NOZZLE_DIAMETER=0.4 KEEP_BED_AT=0
+description: 
+  PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 SOAK=20 NOZZLE_DIAMETER=0.4 KEEP_BED_AT=0 MIN_SPEED=40 MAX_SPEED=120 
+  First line is 0 PA, next line is with 0.005 increase
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
   {% set SOAK = params.SOAK|default(20)|float %}
   {% set NOZZLE_DIAMETER = params.NOZZLE_DIAMETER|default(0.4)|float %}
   {% set KEEP_BED_AT = params.KEEP_BED_AT|default(0)|float %}
+  {% set MIN_SPEED = params.MIN_SPEED|default(20)|float %}
+  {% set MAX_SPEED = params.MAX_SPEED|default(120)|float %}
 
   PRINT_START BED={BED} EXTRUDER={EXTRUDER} SOAK={SOAK}
-  _PRESSURE_ADVANCE_CALIBRATION START=0.02 INCREMENT=0.0025 RAFT=1 OUTER_SPEED=20 INNER_SPEED=200 PURGE_MM=4 LINES_PER_BAND=2 NOZZLE_DIAMETER={NOZZLE_DIAMETER}
+  _PRESSURE_ADVANCE_CALIBRATION START=0 INCREMENT=0.005 RAFT=1 OUTER_SPEED={MIN_SPEED} INNER_SPEED={MAX_SPEED} PURGE_MM=4 LINES_PER_BAND=2 NOZZLE_DIAMETER={NOZZLE_DIAMETER} BANDS_LIMIT=20
   PRINT_END KEEP_BED_AT={KEEP_BED_AT}
 
 #
@@ -84,15 +88,15 @@ gcode:
     {% set retract_length  = params.RETRACT|default(0.6)|float %}                 # how much to retract when traveling between print moves
     {% set initial_purge   = params.PURGE_MM|default(8)|int %}                    # mm of filament to purge before printing. set to 0 to disable
 
-    {% set feedrate_control = params.CONTROL_SPEED|default(30)|int * 60 %}  # print feedrate of the line in the middle of the band
-    {% set feedrate_outer   = params.OUTER_SPEED|default(40)|int * 60 %}    # print feedrate of the lines on the sides of the band
+    {% set feedrate_control = params.CONTROL_SPEED|default(20)|int * 60 %}  # print feedrate of the line in the middle of the band
+    {% set feedrate_outer   = params.OUTER_SPEED|default(20)|int * 60 %}    # print feedrate of the lines on the sides of the band
     {% set feedrate_inner   = params.INNER_SPEED|default(120)|int * 60 %}   # print feedrate of the line in the middle of the band
     {% set feedrate_travel  = params.TRAVEL_SPEED|default(200)|int * 60 %}  # travel feedrate between print moves
     {% set feedrate_raft    = params.RAFT_SPEED|default(120)|int * 60 %}    # print feedrate for printing raft
     {% set feedrate_z       = 5 * 60 %}   # z axis travel feedrate
     {% set feedrate_retract = 50 * 60 %}  # retract and deretract feedrate
     
-    {% set spacing_line  = params.LINE_SPACING|default(0.4)|float %}  # distance between lines in a band
+    {% set spacing_line  = params.LINE_SPACING|default(0.5)|float %}  # distance between lines in a band
     {% set spacing_band  = 2 %}                                       # distance between individual bands
     {% set spacing_raft  = 2 %}                                       # distance between raft lines
     
