add extraoffset, removed istexturedplate

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,10 +1,11 @@
 [gcode_macro PRINT_START]
-description: PRINT_START BED=100 EXTRUDER=240 SOAK=0 TEXTUREDPLATE=false NEVERMOREFANSPEED=1
+description: PRINT_START BED=100 EXTRUDER=240 SOAK=20 EXTRAOFFSET=0 NEVERMOREFANSPEED=1
+  EXTRAOFFSET: Textured plate = -0.04
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
-  {% set SOAK = params.SOAK|default(0)|float %}
-  {% set ON_TEXTURED_PLATE = params.TEXTUREDPLATE|default('false') %}
+  {% set SOAK = params.SOAK|default(20)|float %}
+  {% set EXTRAOFFSET = params.EXTRAOFFSET|default(0)|float %}
   {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(1) %}
   {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
   
@@ -55,11 +56,9 @@ gcode:
   SHOW TEXT='Calibrate Z'
   CALIBRATE_Z
 
-  # Apply offset for textured plate that is lower than sensor probed
-  M118 Is TEXTURED_PLATE_OFFSET applied: {ON_TEXTURED_PLATE == 'true'}
-  {% if ON_TEXTURED_PLATE == 'true' %}
-    TEXTURED_PLATE_OFFSET
-  {% endif %}
+  # Apply extra offset for textured plate or temperature
+  M118 EXTRAOFFSET applied: {EXTRAOFFSET}
+  SET_GCODE_OFFSET Z_ADJUST={EXTRAOFFSET} MOVE=1
 
   clean_nozzle PURGE=true  ; purge filament
 
