update input shaper

--- a/klipper/raspi_mcu_adxl.cfg
+++ b/klipper/raspi_mcu_adxl.cfg
@@ -11,46 +11,47 @@ axes_map: z,-x,y
 [resonance_tester]
 accel_chip: adxl345
 probe_points:
-    150,150,20
+    150,150,50
 max_smoothing: 0.1
 min_freq: 10
-max_freq: 100
+max_freq: 70
 
 [input_shaper]
-shaper_freq_x: 63.6
+shaper_freq_x: 59.6
 shaper_type_x: mzv
-shaper_freq_y: 58.4
+shaper_freq_y: 61.8
 shaper_type_y: 2hump_ei
 
-
 # X
-# Fitted shaper 'zv' frequency = 64.2 Hz (vibrations = 2.5%, smoothing ~= 0.044)
-# To avoid too much smoothing with 'zv', suggested max_accel <= 16100 mm/sec^2
-# Fitted shaper 'mzv' frequency = 63.6 Hz (vibrations = 0.0%, smoothing ~= 0.051)
-# To avoid too much smoothing with 'mzv', suggested max_accel <= 11900 mm/sec^2
-# Fitted shaper 'ei' frequency = 76.8 Hz (vibrations = 0.0%, smoothing ~= 0.055)
-# To avoid too much smoothing with 'ei', suggested max_accel <= 11000 mm/sec^2
-# Fitted shaper '2hump_ei' frequency = 96.4 Hz (vibrations = 0.0%, smoothing ~= 0.059)
-# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 10300 mm/sec^2
-# Fitted shaper '3hump_ei' frequency = 117.2 Hz (vibrations = 0.0%, smoothing ~= 0.061)
-# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 10100 mm/sec^2
-# Recommended shaper is mzv @ 63.6 Hz
+# Fitted shaper 'zv' frequency = 59.2 Hz (vibrations = 1.5%, smoothing ~= 0.051)
+# To avoid too much smoothing with 'zv', suggested max_accel <= 13700 mm/sec^2
+# Fitted shaper 'mzv' frequency = 59.6 Hz (vibrations = 0.0%, smoothing ~= 0.057)
+# To avoid too much smoothing with 'mzv', suggested max_accel <= 10500 mm/sec^2
+# Fitted shaper 'ei' frequency = 71.4 Hz (vibrations = 0.0%, smoothing ~= 0.063)
+# To avoid too much smoothing with 'ei', suggested max_accel <= 9500 mm/sec^2
+# Fitted shaper '2hump_ei' frequency = 88.6 Hz (vibrations = 0.0%, smoothing ~= 0.069)
+# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 8700 mm/sec^2
+# Fitted shaper '3hump_ei' frequency = 106.4 Hz (vibrations = 0.0%, smoothing ~= 0.072)
+# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 8300 mm/sec^2
+# Recommended shaper is mzv @ 59.6 Hz
+
 # Y 
-# Fitted shaper 'zv' frequency = 62.0 Hz (vibrations = 27.8%, smoothing ~= 0.047)
-# To avoid too much smoothing with 'zv', suggested max_accel <= 15000 mm/sec^2
-# Fitted shaper 'mzv' frequency = 45.8 Hz (vibrations = 5.3%, smoothing ~= 0.097)
-# To avoid too much smoothing with 'mzv', suggested max_accel <= 6200 mm/sec^2
-# Fitted shaper 'ei' frequency = 59.2 Hz (vibrations = 6.7%, smoothing ~= 0.092)
-# To avoid too much smoothing with 'ei', suggested max_accel <= 6500 mm/sec^2
-# Fitted shaper '2hump_ei' frequency = 58.4 Hz (vibrations = 0.2%, smoothing ~= 0.158)
-# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 3800 mm/sec^2
-# Fitted shaper '3hump_ei' frequency = 61.0 Hz (vibrations = 0.0%, smoothing ~= 0.220)
-# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 2700 mm/sec^2
-# Recommended shaper is 2hump_ei @ 58.4 Hz
+# Fitted shaper 'zv' frequency = 62.6 Hz (vibrations = 27.4%, smoothing ~= 0.046)
+# To avoid too much smoothing with 'zv', suggested max_accel <= 15300 mm/sec^2
+# Fitted shaper 'mzv' frequency = 43.8 Hz (vibrations = 1.6%, smoothing ~= 0.106)
+# To avoid too much smoothing with 'mzv', suggested max_accel <= 5700 mm/sec^2
+# Fitted shaper 'ei' frequency = 58.6 Hz (vibrations = 4.4%, smoothing ~= 0.094)
+# To avoid too much smoothing with 'ei', suggested max_accel <= 6400 mm/sec^2
+# Fitted shaper '2hump_ei' frequency = 61.8 Hz (vibrations = 0.0%, smoothing ~= 0.141)
+# To avoid too much smoothing with '2hump_ei', suggested max_accel <= 4200 mm/sec^2
+# Fitted shaper '3hump_ei' frequency = 75.6 Hz (vibrations = 0.0%, smoothing ~= 0.143)
+# To avoid too much smoothing with '3hump_ei', suggested max_accel <= 4200 mm/sec^2
+# Recommended shaper is mzv @ 43.8 Hz
 
 ######## Testing resonances 
 ### A/B Frequencies https://www.klipper3d.org/Measuring_Resonances.html#testing-custom-axes
 # ~/klipper/scripts/graph_accelerometer.py -c /tmp/raw_data_axis*.csv -o /tmp/resonances.png
+# scp pi@remoteHost:/tmp/resonances.png resonances.png
 
 [gcode_macro RESONANCE_MOTORS]
 description: Do belt resonance A&B
