use filament_type to guess defaults for Heat Soak Duration and Nevermore fan speed

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,14 +1,15 @@
 [gcode_macro PRINT_START]
-description: PRINT_START BED=100 EXTRUDER=240 SOAK=20 EXTRAOFFSET=0 NEVERMOREFANSPEED=1
+description: PRINT_START BED=100 EXTRUDER=240 FILAMENT_TYPE=none EXTRAOFFSET=0 SOAK=-1 NEVERMOREFANSPEED=-1 FL_SIZE=5_5_295_295
   EXTRAOFFSET: Textured plate = -0.04
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
-  {% set SOAK = params.SOAK|default(20)|float %}
+  {% set FILAMENT_TYPE = params.FILAMENT_TYPE|default("none")|string %}
+  {% set SOAK = params.SOAK|default(-1)|float %}
   {% set EXTRAOFFSET = params.EXTRAOFFSET|default(0)|float %}
-  {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(1) %}
+  {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(-1) %}
   {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
-  
+
   CASELIGHT POWER=1
   BED_MESH_CLEAR   
 
@@ -18,13 +19,45 @@ gcode:
 
   CG28               ; Home all axes
 
-  PARK_CENTER Z=15   # Position Nozzle at center to help preheat chamber
-
   SHOW TEXT='Heating bed...'
-  M190 S{BED}        ; heat bed
-  SET_NEVERMORE_SPEED SPEED={NEVERMORE_FAN_SPEED}
+  M190 S{BED}        ; heat bed blocking
+  SET_NEVERMORE_SPEED SPEED={NEVERMORE_FAN_SPEED} FILAMENT_TYPE={FILAMENT_TYPE}
 
-  clean_nozzle PURGE=false  ; clean nozzle
+  WAIT_AND_CLEAN_NOZZLE DURATION={SOAK} FILAMENT_TYPE={FILAMENT_TYPE}
+
+  SHOW TEXT='Quad Gantry Level'
+  QUAD_GANTRY_LEVEL CALIBRATE=false
+
+  SHOW TEXT='Bed Mesh'
+  ADAPTIVE_BED_MESH SIZE={FL_SIZE}
+
+  SHOW TEXT='Heating Extruder'
+  M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
+  CLEAN_NOZZLE PURGE=false  ; clean nozzle
+
+  SHOW TEXT='Calibrate Z'
+  CALIBRATE_Z
+
+  # Apply extra offset for textured plate or temperature
+  M118 EXTRAOFFSET applied: {EXTRAOFFSET}
+  SET_GCODE_OFFSET Z_ADJUST={EXTRAOFFSET} MOVE=1
+
+  CLEAN_NOZZLE PURGE=true  ; purge filament
+
+  G90                         ; Use absolute coordinates
+ 
+  SHOW TEXT='Print Started'
+
+[gcode_macro WAIT_AND_CLEAN_NOZZLE]
+description: WAIT_AND_CLEAN_NOZZLE DURATION=-1 FILAMENT_TYPE=PLA
+gcode:
+  {% set DURATION = params.DURATION|default(-1)|float %}
+  {% set FILAMENT_TYPE = params.FILAMENT_TYPE|default("PLA")|string %}
+  {% if DURATION == -1 and ('ABS' in FILAMENT_TYPE or 'ASA' in FILAMENT_TYPE) %}
+    {% set SOAK = 40 %}
+  {% elif DURATION == -1 %}
+    {% set SOAK = 20 %}
+  {% endif %}
 
   ; Soak printer to let it thermally expand to have a constant first layer 
   {% if (SOAK|int) > 0 %}
@@ -36,40 +69,26 @@ gcode:
       ; if factor of 5 clean nozzle
       ; else wait 1 minute
       G4 P60000 # Wait 1 minute
+
+      {% if timer%5 == 0 %}
+        CG28 ; Conditionnal homing
+        CLEAN_NOZZLE PURGE=false  ; clean nozzle
+      {% endif %}
           
     {% endfor %}
-  SHOW TEXT='Soak Complete'
+    CLEAN_NOZZLE PURGE=false  ; clean nozzle
+    SHOW TEXT='Soak Complete'
+  {% else %}
+    CLEAN_NOZZLE PURGE=false  ; clean nozzle
+    SHOW TEXT='Soak Skipped'
   {% endif %}
-
-  clean_nozzle PURGE=false  ; clean nozzle
-
-  SHOW TEXT='Quad Gantry Level'
-  QUAD_GANTRY_LEVEL CALIBRATE=false
-
-  SHOW TEXT='Bed Mesh'
-  ADAPTIVE_BED_MESH SIZE={FL_SIZE}
-
-  SHOW TEXT='Heating Extruder'
-  M109 S{EXTRUDER}          ; Set and wait for nozzle to reach temperature
-  clean_nozzle PURGE=false  ; clean nozzle
-
-  SHOW TEXT='Calibrate Z'
-  CALIBRATE_Z
-
-  # Apply extra offset for textured plate or temperature
-  M118 EXTRAOFFSET applied: {EXTRAOFFSET}
-  SET_GCODE_OFFSET Z_ADJUST={EXTRAOFFSET} MOVE=1
-
-  clean_nozzle PURGE=true  ; purge filament
-
-  G90                         ; Use absolute coordinates
- 
-  SHOW TEXT='Print Started'
+  
 
 [gcode_macro PRINT_END]
 description: PRINT_END KEEP_BED_AT=0
 gcode:
     {% set BED = params.KEEP_BED_AT|default(0)|float %}
+    # IF ABS NEVERMORE = 1 For 15 Minutes ELSE NEVERMORE = 0
     SET_NEVERMORE_SPEED SPEED=1
   
     M400                           ; wait for buffer to clear
