--- a/klipper/fan.cfg
+++ b/klipper/fan.cfg
@@ -6,6 +6,14 @@ description: SET_NEVERMORE SPEED=<speed> This command sets the speed of a fan. m
 
 gcode:
     {% set SPEED = params.SPEED|default(0)|float %}
+    {% set FILAMENT_TYPE = params.FILAMENT_TYPE|default("none")|string %}
+
+    {% if NEVERMORE_FAN_SPEED == -1 and ('ABS' in FILAMENT_TYPE or 'ASA' in FILAMENT_TYPE) %}
+        {% set NEVERMORE_FAN_SPEED = 1 %}
+    {% elif NEVERMORE_FAN_SPEED == -1 %}
+        {% set NEVERMORE_FAN_SPEED = 0.3 %}
+    {% endif %}
+
     SET_FAN_SPEED FAN=nevermore_fan SPEED={SPEED}
 
 #####################################################################
