Add default soak if duration is set rename size to FL_SIZE

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -1,3 +1,4 @@
+;Use this start command in your SuperSlicer PRINT_START BED=[first_layer_bed_temperature] EXTRUDER=[first_layer_temperature] FILAMENT_TYPE=[filament_type] EXTRAOFFSET=0 SOAK=-1 NEVERMOREFANSPEED=-1 FL_SIZE={first_layer_print_min[0]}_{first_layer_print_min[1]}_{first_layer_print_max[0]}_{first_layer_print_max[1]}
 [gcode_macro PRINT_START]
 description: PRINT_START BED=100 EXTRUDER=240 FILAMENT_TYPE=none EXTRAOFFSET=0 SOAK=-1 NEVERMOREFANSPEED=-1 FL_SIZE=5_5_295_295
   EXTRAOFFSET: Textured plate = -0.04
@@ -8,7 +9,10 @@ gcode:
   {% set SOAK = params.SOAK|default(-1)|float %}
   {% set EXTRAOFFSET = params.EXTRAOFFSET|default(0)|float %}
   {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(-1) %}
-  {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
+  {% set FL_SIZE = params.FL_SIZE|default("0_0_0_0")|string %}
+
+  ; display print start values
+  SHOW TEXT='PRINT_START BED={BED} EXTRUDER={EXTRUDER} FILAMENT_TYPE={FILAMENT_TYPE} EXTRAOFFSET={EXTRAOFFSET} SOAK={SOAK} NEVERMOREFANSPEED={NEVERMOREFANSPEED} FL_SIZE={FL_SIZE}'
 
   CASELIGHT POWER=1
   BED_MESH_CLEAR   
@@ -57,6 +61,8 @@ gcode:
     {% set SOAK = 40 %}
   {% elif DURATION == -1 %}
     {% set SOAK = 20 %}
+  {% else %}
+    {% set SOAK = DURATION %}
   {% endif %}
 
   ; Soak printer to let it thermally expand to have a constant first layer 
