Sync some fixes done directly in the webui

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -9,10 +9,10 @@ gcode:
   {% set SOAK = params.SOAK|default(-1)|float %}
   {% set EXTRAOFFSET = params.EXTRAOFFSET|default(0)|float %}
   {% set NEVERMORE_FAN_SPEED = params.NEVERMOREFANSPEED|default(-1) %}
-  {% set FL_SIZE = params.FL_SIZE|default("0_0_0_0")|string %}
+  {% set FL_SIZE = params.FL_SIZE|default("5_5_295_295")|string %}
 
   ; display print start values
-  SHOW TEXT='PRINT_START BED={BED} EXTRUDER={EXTRUDER} FILAMENT_TYPE={FILAMENT_TYPE} EXTRAOFFSET={EXTRAOFFSET} SOAK={SOAK} NEVERMOREFANSPEED={NEVERMOREFANSPEED} FL_SIZE={FL_SIZE}'
+  SHOW TEXT='PRINT_START BED={BED} EXTRUDER={EXTRUDER} FILAMENT_TYPE={FILAMENT_TYPE} EXTRAOFFSET={EXTRAOFFSET} SOAK={SOAK} NEVERMOREFANSPEED={NEVERMORE_FAN_SPEED} FL_SIZE={FL_SIZE}'
 
   CASELIGHT POWER=1
   BED_MESH_CLEAR   
@@ -94,8 +94,7 @@ gcode:
 description: PRINT_END KEEP_BED_AT=0
 gcode:
     {% set BED = params.KEEP_BED_AT|default(0)|float %}
-    # IF ABS NEVERMORE = 1 For 15 Minutes ELSE NEVERMORE = 0
-    SET_NEVERMORE_SPEED SPEED=1
+    {% set FILAMENT_TYPE = params.FILAMENT_TYPE|default("none")|string %}
   
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
@@ -110,8 +109,28 @@ gcode:
     G0 X280 Y308 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     M117 Print Complete
+  
+    PRINT_END_RUN_NEVERMORE FILAMENT_TYPE={FILAMENT_TYPE}
     CASELIGHT POWER=0                     ; kill lights
     
+
+[gcode_macro PRINT_END_RUN_NEVERMORE]
+description:  IF ABS or ASA run NEVERMORE 15 Minutes
+gcode:
+  {% set FILAMENT_TYPE = params.FILAMENT_TYPE|default("none")|string %}
+  
+  {% if 'ABS' in FILAMENT_TYPE or 'ASA' in FILAMENT_TYPE %}
+    SET_NEVERMORE_SPEED SPEED=1
+    {% for timer in range( 15|int,0,-1) %}
+      # we cycle once a minute, so we can send an update to keep octoprint happy, rather than just sleeping for the entire soak
+      SHOW TEXT='AirClean: {timer|int}m remaining'
+      M105
+      # if factor of 5 clean nozzle
+      # else wait 1 minute
+      G4 P60000 # Wait 1 minute
+    {% endfor %}
+  {% endif %}
+  SET_NEVERMORE_SPEED SPEED=0
 
 [gcode_macro PAUSE]
 description: Pause the actual running print
