--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -28,7 +28,7 @@
 
 #######################################################################################################################################
 
-# Name of the macro is clean_nozzle.
+# Name of the macro is CLEAN_NOZZLE.
 
 [gcode_macro CLEAN_NOZZLE]
 
@@ -141,7 +141,7 @@ variable_bucket_start: 26
 
 # Placeholder. The variable will later be set to contain, at random, a number representing the left or right bucket.
 variable_bucket_pos:            1	        
-description: clean_nozzle PURGE=false/(true)
+description: CLEAN_NOZZLE PURGE=false/(true)
 gcode:
    # First, check if the axes are homed.
    {% if "xyz" in printer.toolhead.homed_axes %}
@@ -149,7 +149,7 @@ gcode:
       {% set _enable_purge= params.PURGE|default(enable_purge) == 'true' %}
 
       ## Save the gcode state in this macro instance.
-      SAVE_GCODE_STATE NAME=clean_nozzle
+      SAVE_GCODE_STATE NAME=CLEAN_NOZZLE
 
       ## Set to absolute positioning.
       G90
@@ -165,7 +165,7 @@ gcode:
       {% if _enable_purge %}
 
          ### Randomly select left or right bin for purge. 0 = left, 1 = right
-         SET_GCODE_VARIABLE MACRO=clean_nozzle VARIABLE=bucket_pos VALUE={(range(2) | random)}
+         SET_GCODE_VARIABLE MACRO=CLEAN_NOZZLE VARIABLE=bucket_pos VALUE={(range(2) | random)}
 
          ### Raise Z for travel.
          G1 Z{brush_top + clearance_z} F{prep_spd_z}
@@ -218,11 +218,11 @@ gcode:
       G1 X{bucket_start + (bucket_left_width / 3)} Y301 F{prep_spd_xy} 
 
       ## Restore the gcode state to how it was before the macro.
-      RESTORE_GCODE_STATE NAME=clean_nozzle
+      RESTORE_GCODE_STATE NAME=CLEAN_NOZZLE
 
    {% else %}
 
-      ## raise error will stop any macros that clean_nozzle is referenced in from proceeding for safety.
+      ## raise error will stop any macros that CLEAN_NOZZLE is referenced in from proceeding for safety.
       { action_raise_error("Please home your axes!") }
       M117 Please home first!
 
