--- a/klipper/pressure_advance_calibration.cfg
+++ b/klipper/pressure_advance_calibration.cfg
@@ -1,8 +1,9 @@
 
 [gcode_macro PRESSURE_ADVANCE_CALIBRATION]
 description: 
-  PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 SOAK=20 NOZZLE_DIAMETER=0.4 KEEP_BED_AT=0 MIN_SPEED=40 MAX_SPEED=120 
+  PRESSURE_ADVANCE_CALIBRATION BED=100 EXTRUDER=240 SOAK=20 NOZZLE_DIAMETER=0.4 KEEP_BED_AT=0 MIN_SPEED=40 MAX_SPEED=120 RAFT_SPEED=120
   First line is 0 PA, next line is with 0.005 increase
+  LH:Nozzle_size/2 LW:nozzle_size*1.25
 gcode:
   {% set BED = params.BED|default(100)|float %}
   {% set EXTRUDER = params.EXTRUDER|default(240)|float %}
@@ -11,9 +12,10 @@ gcode:
   {% set KEEP_BED_AT = params.KEEP_BED_AT|default(0)|float %}
   {% set MIN_SPEED = params.MIN_SPEED|default(20)|float %}
   {% set MAX_SPEED = params.MAX_SPEED|default(120)|float %}
+  {% set RAFT_SPEED = params.RAFT_SPEED|default(120)|float %}
 
   PRINT_START BED={BED} EXTRUDER={EXTRUDER} SOAK={SOAK}
-  _PRESSURE_ADVANCE_CALIBRATION START=0 INCREMENT=0.005 RAFT=1 OUTER_SPEED={MIN_SPEED} INNER_SPEED={MAX_SPEED} PURGE_MM=4 LINES_PER_BAND=2 NOZZLE_DIAMETER={NOZZLE_DIAMETER} BANDS_LIMIT=20
+  _PRESSURE_ADVANCE_CALIBRATION START=0 INCREMENT=0.005 RAFT=1 OUTER_SPEED={MIN_SPEED} INNER_SPEED={MAX_SPEED} PURGE_MM=4 LINES_PER_BAND=2 NOZZLE_DIAMETER={NOZZLE_DIAMETER} BANDS_LIMIT=20 feedrate_raft={RAFT_SPEED}
   PRINT_END KEEP_BED_AT={KEEP_BED_AT}
 
 #
