add safeguard for EXTRA_OFFSET

--- a/klipper/client_macros.cfg
+++ b/klipper/client_macros.cfg
@@ -43,8 +43,10 @@ gcode:
   CALIBRATE_Z
 
   # Apply extra offset for textured plate or temperature
-  M118 EXTRAOFFSET applied: {EXTRAOFFSET}
-  SET_GCODE_OFFSET Z_ADJUST={EXTRAOFFSET} MOVE=1
+  {% if EXTRAOFFSET<0.2 and EXTRAOFFSET>-0.2 %}
+    M118 EXTRAOFFSET applied: {EXTRAOFFSET}
+    SET_GCODE_OFFSET Z_ADJUST={EXTRAOFFSET} MOVE=1
+  {% endif %}
 
   CLEAN_NOZZLE PURGE=true  ; purge filament
 
