--- a/klipper/nozzle_scrub.cfg
+++ b/klipper/nozzle_scrub.cfg
@@ -76,15 +76,8 @@ variable_wipe_spd_xy:        6000	         ; Nozzle wipe speed in mm/min.
 #                     PRINTER FRONT
 # 
 # 
-## For V1.8, you may need to measure where your brush is on the x axis and input manually into any of the variable_brush_start uncommented.
-## For V2.4 250mm build, uncomment this below: 
-#variable_brush_start:     25	    
-
 ## For V2.4 300mm build, uncomment this below:
 variable_brush_start:     58
-
-## For V2.4 350mm build, uncomment this below:
-#variable_brush_start:     75
 
 # This value is defaulted from brush location in CAD (rear left). Change if your brush width is different.
 variable_brush_width:          37	
@@ -112,14 +105,8 @@ variable_brush_depth:       0
 #  _______________________________________________________________________________________
 #                                    PRINTER FRONT
 # 
-## For V2.4 250mm build, uncomment below 
-#variable_bucket_left_width:    42
-
-## For V2.4 300mm build, uncomment below
+# For V2.4 300mm build, uncomment below
 variable_bucket_left_width:    42
-
-## For V2.4 350mm build, uncomment below
-#variable_bucket_left_width:    92   
 
 # These values are defaulted from bucket geometry in CAD (rear left location). Change only if you're using a custom bucket.
 variable_bucket_right_width:   42            
